Move-over files and CC@3.0 and ng-file-upload

--- a/lab-michael/app/index.html
+++ b/lab-michael/app/index.html
@@ -6,7 +6,12 @@
     <title>Lab 27 NG-Auth</title>
   </head>
   <body>
-    <navbar></navbar>
-    <ui-view></ui-view>
+    <header>
+      <navbar></navbar>
+    </header>
+    <main>
+      <ui-view></ui-view>
+    </main>
   </body>
+    <footer></footer>
 </html>
